@@ -1,5 +1,10 @@
 2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* NEWS, src/login.c: Do not log in utmp / utmpx / wtmp when PAM is
+	enabled. This is already done by pam_lastlog.
+
+2011-07-23  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/chpasswd.c: Add annotations to indicate that usage() does
 	not return.
 	* src/chpasswd.c: Reindent.
